# kotonoha-asr

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Dockerfile  GEMINI.md  LICENSE  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  vite.config.js  vitest.config.ts
.github/workflows/: publish.yml
doc/: dependency-graph.md  svelte_coding_rules.md  technical_specifications.md  testing_rules.md  typescript_coding_style.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asr.rs  audio_converter.rs  download.rs  lib.rs  main.rs  transcription.rs
src/lib/application/stores/: asrStore.svelte.ts  setupStore.svelte.ts
src/lib/application/usecases/: asrUseCases.ts  modelSetup.ts  saveTranscriptionFile.ts
src/lib/domain/entities/: asr.ts
src/lib/infrastructure/repositories/: asrRepository.ts  fileRepository.ts  modelDownloadRepository.ts
src/lib/presentation/components/: InitialView.svelte  ProcessingView.svelte
src/lib/presentation/utils/: time.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
tools/: generate-dependency-graph.ts
